# e7020e_project

./: CHANGELOG.md  README.md  TODO.md
hardware/: README.md
hardware/assets/: E7020E.kicad_sym  designrule_template.kicad_pro
hardware/assets/BJT SMD Transistor (MMBT2222A_DG_215)/: SOT95P230X110-3N.kicad_mod
hardware/assets/Base/: E7020E.kicad_sym  designrule_template.kicad_pcb  designrule_template.kicad_pro
hardware/assets/Battery Holder (796136-1)/: 796136-1.kicad_sym  TE_796136-1.kicad_mod
hardware/assets/Schottky Diode (ZLLS500TA)/: SOT91P240X110-3N.kicad_mod  (+1 more)
hardware/backup_battery/: backup_battery.kicad_pro  backup_battery.kicad_sch  fp-lib-table  sym-lib-table
hardware/backup_battery_hw/: backup_battery_hw.kicad_pro  fp-lib-table  sym-lib-table
hardware/base/: base.kicad_pcb  base.kicad_pro  base.kicad_sch  fp-lib-table  sym-lib-table
hardware/haptic_actuator/: fp-lib-table  haptic_actuator.kicad_pro  haptic_actuator.kicad_sch
hardware/humidifier/: fp-lib-table  humidifier.kicad_pro  humidifier.kicad_sch
hardware/opt_and_fan/: opt_and_fan.kicad_pro  opt_and_fan.kicad_sch
software/: .gitignore  Cargo.toml  Embed.toml  README.md  State Machine.drawio
software/.cargo/: config.toml
software/examples/: SeaBreeze.pcm  backup_battery_mode.rs  backup_battery_mode_COMP.rs  backup_battery_mode_LPCOMP.rs  cli.rs  display.rs  fan.rs  haptic_actuator.rs  led.rs  pwm.rs  reset_btn.rs  rotary_encoder.rs  rtc.rs  rtic_blinky.rs  serial_over_usb.rs  speaker.rs  speakerv2.rs  speakerv3_sinus.rs  thermistor.rs
software/src/: backup_mode.rs  cli.rs  display.rs  gpio.rs  main.rs  pins.rs  pwm.rs  rotary_encoder.rs  rtc.rs  rtt.rs  speaker.rs  state_machine.rs  temp.rs  thermistor.rs  time.rs  uicr.rs
(+8 files in other folders)
