[package]
authors = []
edition = "2021"
readme = "README.md"
name = "seabreeze"
version = "0.1.0"

[workspace]


[dependencies]
cortex-m = { version = "0.7.4", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rtic = "1.1.4"
# for RAW exception handling
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7" # we cannot currently use latest for non-blocking operations

# Panic handlers
panic-rtt-target = { version = "0.2.0" }
panic-halt = { version = "1.0.0" }

# Tracing
rtt-target = { version = "0.6.1" }

# Monotonic timers
systick-monotonic = "1.0.0"
dwt-systick-monotonic = "1.0.0"
nb = "1.1.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
usbd-hid = "0.8.2"

embedded-graphics = "0.8.1"
ssd1306 = "0.9.0"
libm = "0.2.11"

# HAL
#[dependencies.nrf52840-hal]
#version = "0.18.0"
#features = ["rt"]
#optional = true

[dependencies.nrf52833-hal]
version = "0.18.0"
features = ["rt"]
optional = true

[features]
#52840 = ["nrf52840-hal"]
52833 = ["nrf52833-hal"]
default = ["52833"]

[profile.dev]
incremental = false # better debug 
codegen-units = 1   # better debug
opt-level = 0       # no optimization
lto = false         # no optimization
# overflow-checks = false # uncomment to disable overflow checks for dev/debug builds  

[profile.release]
incremental = false    # better debug and also better optimizations
codegen-units = 1      # better debug and also better optimizations
debug = true           # symbols are nice and they don't increase the size on Flash
lto = true             # better optimizations
overflow-checks = true # set true to enable overflow checks for release builds
